--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a>
       </div>
       <!-- SEARCH -->
-      <div clas="flex flex-one align-center">
+      <div class="flex flex-one align-center">
         <div>
           <form>
             <input aria-label="Search" placeholder="What can we help you find?" type="search">
@@ -123,7 +123,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <section class="container">
+    <section class="container space-between">
       <div>
         <div class="text-primary">Customer Support</div>
         <ul>
