--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <!-- PROFILE -->
         <div class="flex align-center">
-          <div class="flex-column">
+          <div class="flex flex-column">
             John Doe <a href="#">Log Out</a>
           </div>
           <div class="flex"><img alt="John Doe" src="img/profile-pic.jpg"></div>
@@ -166,7 +166,7 @@
         <div>
           <div>Email Updates</div>
           <div>Exclusive sales, special offers, and more.</div>
-          <input type="text form-control" placeholder="Enter email address" />
+          <input type="text" class="form-control" placeholder="Enter email address" />
           <button class="btn btn-primary">Sign up</button>
         </div>
       </div>
