--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
       <div class="social">
         <div class="text-primary link-header">Follow Us</div>
         <ul>
-          <li><a href="#"></a class="twitter"></li>
-          <li><a href="#"></a class="facebook"></li>
-          <li><a href="#"></a class="instagram"></li>
-          <li><a href="#"></a class="pinterest"></li>
+          <li><a href="#" class="twitter"></a></li>
+          <li><a href="#" class="facebook"></a></li>
+          <li><a href="#" class="instagram"></a></li>
+          <li><a href="#" class="pinterest"></a></li>
         </ul>
         <div class="newsletter">
           <div class="link-header">Email Updates</div>
