--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
 
     <!-- PS DEMO -->
     <section class="ps">
-      <div class="flex flex-column align-center space-between demo">
+      <div class="flex flex-column align-center space-between">
         <img src="img/pluralsight-white.png" />
-        <div>This site is created for demonstrative purposes only and does not offer any real products or services.</div>
+        <div class="demo">This site is created for demonstrative purposes only and does not offer any real products or services.</div>
       </div>
     </section>
 
